# rsjapp-mianyang

./: .gitignore  README.md  app.js  build_exe.py  course.js  course.py  main.py  main.spec  package-lock.json  package.json  pyproject.toml  rthook_onnxruntime.py  video_helper.py
json_example/: all_courses.json  chapter.json  course.json  course_finished.json  fail.json  login.json  video_detail.json  video_structure.json  video_watch_finished.json
json_example/exam/: dataSource.json  paper_answer_card.json  paper_header.json  score.json  singleQuestionDetail.json  singleQuestionDetail2.json  singleQuestionDetail3.json  submitQuestionRightAnswer.json
