[project]
name = "rsjappmianyang"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "customtkinter>=5.2.2",
    "ddddocr==1.5.6",
    "opencv-python>=4.13.0.92",
    "pillow>=12.1.1",
    "pyexecjs2>=1.6.1",
    "requests>=2.32.5",
]
